fix: make color chips more usable on mobile

--- a/src/components/ColorBlock/ColorBlock.module.css
+++ b/src/components/ColorBlock/ColorBlock.module.css
@@ -12,4 +12,5 @@
 .name {
   border-radius: 4px;
   margin-bottom: 3rem;
+  width: 100%;
 }
